--- a/public/500.html
+++ b/public/500.html
@@ -1,33 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<?xml version='1.0' encoding='utf-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang='en-US' xml:lang='en-US' xmlns='http://www.w3.org/1999/xhtml'>
+  <head>
+    <title>Juggernaut Loot Factor</title>
+    <link href="/stylesheets/default.css" media="screen" rel="stylesheet" type="text/css" />
+  </head>
+  <body id='index'>
+    <div class='clearfix' id='wrapper'>
+      <div class='clearfix' id='top-menu'>
+        <ul>
+          <li><a href="http://www.juggernautguild.com/">Juggernaut (Mal'Ganis US Horde)</a></li>
+        </ul>
+        <ul id='right'>
+          <li><a href="http://www.juggernautguild.com/index.php?act=home">Home</a></li>
+          <li><a href="http://www.juggernautguild.com/index.php?showtopic=13476">About Us</a></li>
+          <li><a href="http://www.juggernautguild.com/index.php?showtopic=13475">Joining</a></li>
+          <li><a href="http://www.juggernautguild.com/index.php?act=idx">Forums</a></li>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>We're sorry, but something went wrong (500)</title>
-	<style type="text/css">
-		body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-		div.dialog {
-			width: 25em;
-			padding: 0 4em;
-			margin: 4em auto 0 auto;
-			border: 1px solid #ccc;
-			border-right-color: #999;
-			border-bottom-color: #999;
-		}
-		h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-	</style>
-</head>
-
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-    <p><small>(If you're the administrator of this website, then please read
-    the log file "<%=h RAILS_ENV %>.log"
-    to find out what went wrong.)</small></p>
-  </div>
-</body>
+          <li><a href="http://www.juggernautguild.com/index.php?act=calendar">Calendar</a></li>
+          <li><a href="http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&amp;n=Juggernaut+II&amp;p=1">Roster</a></li>
+          <li><a href="http://www.juggernautguild.com/index.php?showforum=23">LF</a></li>
+        </ul>
+      </div>
+      <div class='clearfix' id='header'>
+        <div class='clearfix' id='main-menu'>
+          <ul>
+            <li><a href="/">Index</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id='main'>
+        <h2>Server Error</h2>
+        <div id='flash' class='error'>
+          We're sorry, but something went wrong. We've been notified of the error
+          and will look into it.
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
