Re-style our error pages.

--- a/public/503.html
+++ b/public/503.html
@@ -3,38 +3,14 @@
 <html lang='en-US' xml:lang='en-US' xmlns='http://www.w3.org/1999/xhtml'>
   <head>
     <title>Juggernaut Loot Factor</title>
-    <link href="/stylesheets/default.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href='http://www.juggernautguild.com/favicon.ico' rel='shortcut icon' />
+    <link href="http://www.juggernautguild.com/public/min/index.php?f=public/style_css/css_4/calendar_select.css,public/style_css/css_4/ipb_styles.css,public/style_css/css_4/ipb_editor.css,public/style_css/css_4/juggernaut.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/lootfactor.css?1261259219" media="screen" rel="stylesheet" type="text/css" />
   </head>
-  <body id='index'>
-    <div class='clearfix' id='wrapper'>
-      <div class='clearfix' id='top-menu'>
-        <ul>
-          <li><a href="http://www.juggernautguild.com/">Juggernaut (Mal'Ganis US Horde)</a></li>
-        </ul>
-        <ul id='right'>
-          <li><a href="http://www.juggernautguild.com/index.php?act=home">Home</a></li>
-          <li><a href="http://www.juggernautguild.com/index.php?showtopic=13476">About Us</a></li>
-          <li><a href="http://www.juggernautguild.com/index.php?showtopic=13475">Joining</a></li>
-          <li><a href="http://www.juggernautguild.com/index.php?act=idx">Forums</a></li>
-
-          <li><a href="http://www.juggernautguild.com/index.php?act=calendar">Calendar</a></li>
-          <li><a href="http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&amp;n=Juggernaut+II&amp;p=1">Roster</a></li>
-          <li><a href="http://www.juggernautguild.com/index.php?showforum=23">LF</a></li>
-        </ul>
-      </div>
-      <div class='clearfix' id='header'>
-        <div class='clearfix' id='main-menu'>
-          <ul>
-            <li><a href="/">Index</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id='main'>
-        <h2>Temporarily Unavailable</h2>
-        <div id='flash' class='error'>
-          We're sorry, but this site is temporarily unavailable, probably in
-          order to perform maintenance. It should be available shortly.
-        </div>
+  <body class='lf'>
+    <div id='server_error'>
+      <div class='error'>
+        <span>We're sorry, but this site is temporarily unavailable, probably in order to perform maintenance. It should be available shortly.</span>
       </div>
     </div>
   </body>
